@@ -1,4 +1,6 @@
 Version 1.0.2 (?? ??? 2005)
+ - Security fixes: fixes for activity_log.php, export_handler.php and
+   edit_template.php that deal with SQL Injection
  - Fixed bug 1349621: Information disclosure vulnerabililty on failed login
  - Fixed bug 1353363: publish.php logic error for public user?
  - Fixed bug 1328589: typo in del_entry for read-only calendars.
